Clean up folder/project structure

--- a/BlazorSwitchableApp/BlazorApp/BlazorApp.csproj
+++ b/BlazorSwitchableApp/BlazorApp/BlazorApp.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BlazorWasmApp\Shared\BlazorWasmApp.Shared.csproj" />
+    <ProjectReference Include="..\Shared\BlazorWasmApp.Shared.csproj" />
   </ItemGroup>
+
 </Project>
