--- a/BlazorMauiApp/BlazorMauiApp/BlazorMauiApp.csproj
+++ b/BlazorMauiApp/BlazorMauiApp/BlazorMauiApp.csproj
@@ -49,4 +49,8 @@
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\BlazorApp\BlazorApp.csproj" />
+	</ItemGroup>
+
 </Project>
